--- a/tasks/docker_engine.yml
+++ b/tasks/docker_engine.yml
@@ -43,7 +43,7 @@
 
 - name: Install the Docker Engine.
   package:
-    name: docker-engine
+    name: "{{ docker_package_name }}"
     state: present
 
 - name: Configure systemd for docker
