--- a/vars/main.yml
+++ b/vars/main.yml
@@ -5,7 +5,7 @@ docker_pubkey_server: "hkp://ha.pool.sks-keyservers.net:80"
 
 docker_apt_repo: "deb https://apt.dockerproject.org/repo {{ ansible_distribution | lower }}-{{ ansible_distribution_release }} {{ docker_repo }}"
 
-docker_yum_repo: "https://download.docker.com/linux/centos/docker-ce.repo"
+docker_yum_repo: "https://download.docker.com/linux/centos/7/$basearch/stable"
 docker_yum_gpgkey: "https://download.docker.com/linux/centos/gpg"
 docker_package_name: "docker-ce"
 
