Support for docker-ce

--- a/tasks/docker_py.yml
+++ b/tasks/docker_py.yml
@@ -9,9 +9,26 @@
   when: ansible_version is defined
     and ansible_version.full | version_compare('2.2.0.0', '<')
 
-- name: Install docker-py
+- name: Install docker-py (python <= 2.6)
   pip:
     name: docker-py
     state: present
-  when: (ansible_version is not defined) or (ansible_version is defined
-    and ansible_version.full | version_compare('2.2.0.0', '>='))
+  when: (ansible_version is not defined)
+    or  (ansible_version is defined and ansible_version.full | version_compare('2.2.0.0', '>='))
+    and (ansible_python_version | version_compare('2.7.0', '<'))
+
+- name: Uninstall docker-py (python >= 2.7)
+  pip:
+    name: docker-py
+    state: absent
+  when: (ansible_version is not defined)
+    or  (ansible_version is defined and ansible_version.full | version_compare('2.2.0.0', '>='))
+    and (ansible_python_version | version_compare('2.7.0', '>='))
+
+- name: Install docker (python >= 2.7)
+  pip:
+    name: docker
+    state: present
+  when: (ansible_version is not defined)
+    or  (ansible_version is defined and ansible_version.full | version_compare('2.2.0.0', '>='))
+    and (ansible_python_version | version_compare('2.7.0', '>='))
